First working copy.

--- a/dsnd_dash/pyvenv.cfg
+++ b/dsnd_dash/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\gvdne\miniforge3
 include-system-site-packages = false
 version = 3.12.8
 executable = C:\Users\gvdne\miniforge3\python.exe
-command = C:\Users\gvdne\miniforge3\python.exe -m venv C:\Users\gvdne\OneDrive\Desktop\Working Folder\dsnd-dashboard-project\dsnd_dash
+command = C:\Users\gvdne\miniforge3\python.exe -m venv H:\Working folder\dsnd-dashboard-project\dsnd_dash
